--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 
 <body>
-
+    <header>
+        <img src="img/Logo.png" alt="Boolean Logo">
+        <h1>Campo Minato</h1>
+    </header>
 
     <div id="grid" class="container">
 
@@ -28,6 +31,11 @@
 
 
     </div>
+
+    <footer>
+        <p>Made with love by Boolean</p>
+    </footer>
+
 
     <script src="main.js" type="text/javascript"></script>
 </body>
