--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <header>
-        <img src="img/Logo.png" alt="Boolean Logo">
-        <h1>Campo Minato</h1>
+        <div id="logo">
+            <img src="img/Logo.png" alt="Boolean Logo">
+            <h1>Campo Minato</h1>
+        </div>
     </header>
 
     <div id="grid" class="container">
