starting to set up difficulty levels

--- a/index.html
+++ b/index.html
@@ -15,23 +15,18 @@
             <img src="img/Logo.png" alt="Boolean Logo">
             <h1>Campo Minato</h1>
         </div>
+        <div id="dropdown">
+        <p>Difficoltà :  </p>
+        <select name="Difficoltà" id="difficulty">
+            <option value="Easy">Easy</option>
+            <option value="Hard">Hard</option>
+            <option value="Crazy">Crazy</option>
+          </select>
+        </div>
     </header>
 
-    <div id="grid" class="container">
-
-        <!--
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        -->
-
-
-
+    <div id="easy-grid" class="container">
+        
     </div>
 
     <footer>
