--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <option value="Easy">Easy</option>
             <option value="Hard">Hard</option>
             <option value="Crazy">Crazy</option>
-          </select>
+        </select>
+        <button id="start-play">Gioca</button>
         </div>
     </header>
 
-    <div id="easy-grid" class="container">
+    <div id="grid" class="container">
         
     </div>
 
