adjusted opening message

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div id="grid" class="container">
-        
+        <span>Seleziona il livello e clicca "Gioca" per iniziare!</span>
     </div>
 
     <footer>
