mi confondo con le bombe

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <header>
         <div id="logo">
             <img src="img/Logo.png" alt="Boolean Logo">
-            <h1>Campo Minato</h1>
+            <h3>Campo Minato</h1>
         </div>
         <div id="dropdown">
-        <p>Difficoltà :  </p>
-        <select name="Difficoltà" id="difficulty">
-            <option value="Easy">Easy</option>
-            <option value="Hard">Hard</option>
-            <option value="Crazy">Crazy</option>
-        </select>
-        <button id="start-play">Gioca</button>
+            <p>Difficoltà:</p>
+            <select name="Difficoltà" id="difficulty">
+                <option value="Easy">Easy</option>
+                <option value="Hard">Kinda Hard</option>
+                <option value="Crazy">Crazy Hard</option>
+            </select>
+            <button id="start-play">Gioca</button>
         </div>
     </header>
 
@@ -31,7 +31,7 @@
     </div>
 
     <footer>
-        <p>Made with love by Boolean</p>
+        <p>Made with &hearts; by <a href="https://www.linkedin.com/in/katiepalumbo/">Katie</a></p>
     </footer>
 
 
